--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,35 @@
 .box {
 	margin: 10px 0;
 }
+
+button.icon-button {
+	padding: 4px;
+	position: relative;
+	top: 1px;
+}
+
+button.icon-button span {
+	display: inline-block;
+	position: relative;
+	top: 2px;
+}
+
+.message-box {
+	padding: 20px;
+	top: 40%;
+	left: 40%;
+	position: absolute;
+	background-color: #F5F5F5;
+	display: none;
+	border: 2px dashed #333;
+}
+
+.message-box h3 {
+	font-size: 1.6em;
+	margin-bottom: 30px;
+}
+
+.wait-spinner {
+	height: 32px;
+	margin-top: 10px;
+}
